--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,13 @@
 buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.15'
+    }
+
     ext {
         compose_version = '1.2.0'
     }
