--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx'
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 }
