--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,7 @@ dependencies {
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+
+    implementation "com.github.alorma:compose-settings-ui-m3:0.27.0"
+
 }
